# portfolia_app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
portfolio/python/: .env  PORTFOLIO_ANALYTICS_IMPROVEMENTS.md  constraints.txt  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  simple_validation.py  test_calculation_fixes.py  test_comprehensive_portfolio_calculations.py  test_portfolio_5_calculations.py  validate_calculations.py
portfolio/python/.run/: start_api.run.xml
portfolio/python/api/: .cursorrules  AUTOMATIC_STARTUP_SETUP.md  DATABASE_README.md  Dockerfile  ENVIRONMENT_README.md  PORTFOLIO_ARCHITECTURE.html  README.md  TESTING_SUMMARY.md  activate_venv.sh  alembic.ini  config.env.example  constraints.txt  docker-compose.yml  generate_env_docker.sh  health_check.py  main.py  pyproject.toml  requirements.txt  run_tests.sh  setup_database.sh  setup_env.py  start_api.py  start_data_service.py  test_auth_system.py  test_complete_setup.py  test_database_operations.py
portfolio/python/api/.cursor/: launch.json  settings.json
portfolio/python/api/alembic/: env.py
portfolio/python/api/alembic/versions/: 207e355da495_0001_initial_db_schema.py  a6f57b2e28d3_add_currency_to_ticker_info.py  create_market_data_tables.py  f8faaa20f885_initial_database_schema.py  update_volume_to_bigint.py
portfolio/python/api/api/: deps.py
portfolio/python/api/api/v1/: test_router.py
portfolio/python/api/app/: config.py  main.py
portfolio/python/api/app/core/: email_client.py  logging_config.py
portfolio/python/api/auth/: __init__.py  dependencies.py  schemas.py  utils.py
portfolio/python/api/authentication/: database.py  models.py  routers.py  schemas.py  services.py
portfolio/python/api/database/: __init__.py  config.py  connection.py  init_db.py
portfolio/python/api/database/models/: __init__.py  asset.py  transaction.py
portfolio/python/api/docs/: LOGGING_CONFIGURATION.md  MARKET_DATA_SERVICE.md  RESTRUCTURE_SUMMARY.md  TEST_RESULTS_SUMMARY.md
portfolio/python/api/docs/architecture/: IMPLEMENTATION_PLAN.html
portfolio/python/api/docs/development/: DEVELOPMENT.md  MIGRATION_GUIDE.md
portfolio/python/api/market/: database.py  routers.py  schemas.py  services.py  stock.py
portfolio/python/api/models/: __init__.py  auth.py  market.py  market_data.py  portfolio.py
portfolio/python/api/schemas/: __init__.py  portfolio.py  watchlist.py
portfolio/python/api/scripts/: demo_logging.py  setup_environment.sh
portfolio/python/api/services/: __init__.py  data_scheduler.py  market_data_service.py  market_service.py  portfolio_service.py  statistical_service.py  watchlist_alert_service.py  watchlist_service.py
portfolio/python/api/statistical_indicators/: base.py  momentum_indicators.py  routers.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
portfolio/python/api/tests/: conftest.py  performance_comparison.py  run_integration_tests.py  run_tests.sh  test_gfs_strategy.py  test_macd_strategy.py  test_market_stock.py  test_momentum_indicators.py  test_trend_indicators.py  test_volatility_indicators.py  test_volume_indicators.py
portfolio/python/api/tests/integration/: README.md  test_api_endpoints.py
portfolio/python/api/tests/unit/: performance_comparison.py  test_api_endpoints.py  test_complete_setup.py  test_momentum_indicators.py  test_stock.py  test_structure.py  test_trend_indicators.py  test_volatility_indicators.py
portfolio/python/api/trading_strategy/trend_strategy/: __init__.py
portfolio/python/api/utils/: __init__.py
portfolio/python/api/utils/indicators/: __init__.py  routers.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
portfolio/python/api/utils/trading_strategies/: __init__.py  gfs_strategy.py
portfolio/python/app/: Dockerfile  Dockerfile.postgres  Dockerfile.redis  ENV_README.md  README.md  config.py  health_check.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start_api.py  start_api.sh  start_data_service.py
portfolio/python/app/STATICS/: email_verification.html  password_reset_email.html
portfolio/python/app/alembic/: env.py
portfolio/python/app/alembic/versions/: 20250104000000_add_portfolio_analytics_tables.py  20250104000001_optimize_portfolio_asset_indexes.py  20250104000002_add_missing_constraints.py  20250104000003_add_missing_fields.py  22eb674867a8_extends_asset_type_enum.py  426497007c5e_initial_migration.py  9a24d533141c_add_user_id_to_assets_table.py  a0afe386843f_add_user_id_field_to_assets_table.py  a131a7505660_adds_today_pnl_field_to_asset.py  a7147b28ca25_add_analysis_configuration_table.py  a94c0f4e7c77_add_realized_pnl_fields_to_portfolio_.py  f1b2d5154794_remove_market_data_tables.py
portfolio/python/app/api/: deps.py
portfolio/python/app/api/v1/: health_router.py
portfolio/python/app/core/: email_client.py  logging_config.py
portfolio/python/app/core/auth/: __init__.py  dependencies.py  utils.py
portfolio/python/app/core/database/: connection.py  (+3 more)
portfolio/python/app/docs/: DATABASE_README.md  ENDPOINT_STRUCTURE.md  ENVIRONMENT_README.md  MARKET_DATA_SERVICE.md  POSTMAN_SETUP_README.md  Portfolia_API.postman_collection.json  STATISTICAL_INDICATORS_GUIDE.md
portfolio/python/app/examples/: statistical_indicators_example.py
portfolio/python/app/scripts/: demo_logging.py  setup_database.sh
portfolio/python/app/tests/: README.md  conftest.py  run_integration_tests.py  run_tests.py
portfolio/python/app/utils/: __init__.py
portfolio/python/streamlit/: Dockerfile  constraints.txt  main.py  requirements.txt
portfolio/python/streamlit/plots/: __init__.py  momentum_indicator.py  momentum_indicators.py  plots.py  trend_indicators.py  volatility_indicator.py  volume_indicators.py
portfolio/python/streamlit/statistical_indicators/: __init__.py  base.py  momentum_indicators.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
portfolio/python/tests/: __init__.py  conftest.py
portfolio/python/tests/unit/: __init__.py  test_daily_portfolio_calculations.py  test_portfolio_calculations.py
(+241 files in other folders)
